[package]
name = "dqn-wasm"
version = "0.2.0"
edition = "2021"
description = "DQN (Mnih et al. 2013) in Rust/WASM -- CartPole browser demo"
repository = "https://github.com/parsa-mirsaeed/dqn-wasm"
license = "MIT"
keywords = ["reinforcement-learning", "dqn", "webassembly", "wasm"]
categories = ["wasm", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen       = "0.2"
js-sys             = "0.3"
getrandom          = { version = "0.2", features = ["js"] }
serde              = { version = "1",   features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
lto       = true
opt-level = 3
